--- a/vercel.json
+++ b/vercel.json
@@ -9,18 +9,25 @@
         }
       },
       {
-        "src": "backend/src/main.py",
+        "src": "backend/main.py",
         "use": "@vercel/python"
       }
     ],
-    "rewrites": [
+    "routes": [
       {
-        "source": "/api/(.*)",
-        "destination": "/backend/src/main.py"
+        "src": "/api/(.*)",
+        "dest": "backend/main.py"
       },
       {
-        "source": "/(.*)",
-        "destination": "/frontend/index.html"
+        "src": "/assets/(.*)",
+        "dest": "frontend/dist/assets/$1"
+      },
+      {
+        "handle": "filesystem"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "frontend/dist/index.html"
       }
     ]
-}
+  }
