--- a/vercel.json
+++ b/vercel.json
@@ -20,14 +20,14 @@
       },
       {
         "src": "/assets/(.*)",
-        "dest": "frontend/dist/assets/$1"
+        "dest": "/assets/$1"
       },
       {
         "handle": "filesystem"
       },
       {
         "src": "/(.*)",
-        "dest": "frontend/dist/index.html"
+        "dest": "/index.html"
       }
     ]
   }
